examples/bad/share_mut_conflict.mko
fn main() {
    let mut x = 1
    share let s = share_int(x)
    x = 2
    share_drop(s)
}
